Bug 1574569 - Don't abort LocalStorage requests when a sync message from parent is detected; r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D42796